--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MomsSpaghetti</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +10,14 @@
   </head>
 
   <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Mom's Spaghetti", welcome_index_path %></li>
+        <li><%= link_to "About", welcome_about_path %></li>
+      </ul>
+    </div>
+
     <%= yield %>
+  </div>
   </body>
 </html>
