--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container">
       <ul class="nav nav-tabs">
         <li><%= link_to "Mom's Spaghetti", welcome_index_path %></li>
-        <li><%= link_to "About", welcome_about_path %></li>
+        <li><%= link_to "Callback", welcome_callback_path %></li>
       </ul>
     </div>
 
