--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MomsSpaghetti</title>
+    <title>Monitoring Resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
 
@@ -12,12 +12,15 @@
   <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li><%= link_to "Mom's Spaghetti", welcome_index_path %></li>
+        <li><%= link_to "Home Page", welcome_index_path %></li>
         <li><%= link_to "Callback", welcome_callback_path %></li>
+        <li><%= link_to "Monitoring Resources", welcome_resources_path %></li>
       </ul>
+
+      <%= yield %>
     </div>
 
-    <%= yield %>
+
   </div>
   </body>
 </html>
