--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <ul class="nav nav-tabs">
         <li><%= link_to "Home Page", welcome_index_path %></li>
         <li><%= link_to "Callback", welcome_callback_path %></li>
-        <li><%= link_to "Monitoring Resources", welcome_resources_path %></li>
+        <li><%= link_to "Monitoring Resources", projects_resources_path %></li>
       </ul>
 
       <%= yield %>
