--- a/app/views/welcome/callback.html.erb
+++ b/app/views/welcome/callback.html.erb
@@ -1,7 +1,7 @@
 You're in. Next step: <br />
 
 Enter Company ID:
-<form action="/welcome/resources" method = "get">
+<form action="/projects/resources" method = "get">
 	<input type="text" name="company_id" value="">
 	<input type="submit" value="Submit">
 </form>
