--- a/app/views/projects/resources.html.erb
+++ b/app/views/projects/resources.html.erb
@@ -1,5 +1,5 @@
 <h3> Active Projects found for Company (ID <%= @company_id %>):</h3>
-<table class="item-list sortable">
+<table class="table-1">
 		<thead>
 			<tr>
 				<th>ID</th>
