--- a/app/views/welcome/callback.html.erb
+++ b/app/views/welcome/callback.html.erb
@@ -1,7 +1,5 @@
-You're in. Next step: <br />
-
-Enter Company ID:
+Enter Company ID from which to List Projects:
 <form action="/projects/resources" method = "get">
-	<input type="text" name="company_id" value="">
+	<input type="text" name="company_id">
 	<input type="submit" value="Submit">
 </form>
