--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table {
+    border: 2px solid black;
+    margin-top: 20px;
+    width: 100%;
+}
+
+th {
+   border: 1px solid black;
+   text-align: center;
+ }
+
+td {
+   text-align: center;
+   border: 1px solid black;
+}
+
+.table-1 {
+  width: 40%;
+}
