--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
-<a href="https://app.procore.com/oauth/authorize?client_id=57d3d911ff97b866533eaec8dd6168a9d99b6b75b095dc817a0b0192d1906ad1&response_type=code&redirect_uri=http://localhost:3000/welcome/callback" class="btn btn-primary btn-lg" role="button" aria-disabled="true";>Sign Up With Procore</a>
+<div>
+  <%= link_to 'Sign In To Procore', "https://login.procore.com/oauth/authorize?client_id=" + ENV['CLIENT_ID'] + "&response_type=code&redirect_uri=" + ENV['REDIRECT_URL'], :class => "button"%>
+</div>
