--- a/app/views/projects/resources.html.erb
+++ b/app/views/projects/resources.html.erb
@@ -16,7 +16,7 @@
 		</tbody>
 	</table><br>
 
-<h3> Monitoring Resources found for Company (ID <%= @company_id %>):</h3>
+<h3> Select Resources to View (ID <%= @company_id %>):</h3>
   <table class="monitored-checkbox">
   		<thead>
   			<tr>
@@ -34,6 +34,7 @@
   						<span class="checkmark"></span>
 						</label>
 					</td>
+				</tr>
   		  <% end %>
   		</tbody>
   	</table><br>
