Attempted to add datepicker

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -67,6 +67,10 @@ tbody tr td:first-of-type {
   width: 50%;
 }
 
-.months {
+h3 {
+  text-decoration: underline;
+}
 
+h5 {
+  padding-left: 20px;
 }
