--- a/app/views/projects/forecast.html.erb
+++ b/app/views/projects/forecast.html.erb
@@ -1,7 +1,14 @@
 <h3> Monitoring Resources Report</h3>
+  <h5>Today's Date:  <%= Date.today.strftime("%B %e, %Y") %> </h5>
+
+  <input type="text" data-provide='datepicker'>
+
 <% @monitoring_resources.each do |resource| %>
   <% end_date = Date.parse(resource['end_date']).strftime("%B %e, %Y") %>
-
+    <% %>
+    <%  %>
+    <% %>
+    <% %>
   <table class="parent_resources">
   		<thead>
   			<tr>
