--- a/app/views/projects/resources.html.erb
+++ b/app/views/projects/resources.html.erb
@@ -1,4 +1,5 @@
 <h3> Active Projects found for Company (ID <%= @company_id %>):</h3>
+
 <table class="active-projects">
 		<thead>
 			<tr>
@@ -21,7 +22,7 @@
   		<thead>
   			<tr>
   				<th>Name</th>
-					<th> Select to view Monitoring Resources </th>
+					<th> Select to view Monitored Resources Forecast </th>
   			</tr>
   		</thead>
   		<tbody>
