--- a/app/views/welcome/callback.html.erb
+++ b/app/views/welcome/callback.html.erb
@@ -1,4 +1,4 @@
-Enter Company ID from which to List Projects:
+Enter Company ID to view Monitored Resources:
 <form action="/projects/resources" method = "get">
 	<input type="text" name="company_id">
 	<input type="submit" value="Submit">
