--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <%= link_to 'Sign In To Procore', "https://api-sandbox-monthly.procore.com/oauth/authorize?client_id=" + ENV['CLIENT_ID'] + "&response_type=code&redirect_uri=" + ENV['REDIRECT_URL'], :class => "button"%>
+  <%= link_to 'Sign In To Procore', "https://login.procore.com/oauth/authorize?client_id=" + ENV['CLIENT_ID'] + "&response_type=code&redirect_uri=" + ENV['REDIRECT_URL'], :class => "button"%>
 </div>
