Started dynamic calendar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <div class="container">
       <ul class="nav nav-tabs">
         <li><%= link_to "Login", welcome_index_path %></li>
-        <li><%= link_to "Home Page", welcome_callback_path %></li>
+        <li>
+
+          <%= link_to "Home Page", welcome_callback_path %></li>
         <li><%= link_to "Monitoring Resources", projects_resources_path %></li>
       </ul>
 
